
PLIB Change Log.
================

PLIB v1.3.2 (???? 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Added Active Widget Implementation (pui)

  * Added puFilePicker  

  * Added Ref Counting to ssgState

  * Added puBiSlider and puTriSlider

  * Added some missing 'AUTHORS' entries.

  * puDial widget (was actually in 1.3.1 but got
    missed in the 'CHANGES' file)

  * Fixed a problem in the configure.in that prevented
    ssgAux from building.

  * Moved the 'name' and 'user_data' (with associated
    set/get member functions) from ssgEntity down into
    ssgBase so that these functions will work with ssgState
    and ssgTexture objects.  This is needed for PrettyPoly.

PLIB v1.3.1 (Sept 15th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  * Changed License conditions to specifically permit
    use of PLIB outside of LGPL for embedded applications.

  * There is now a task and bug tracking system for PLIB
    on Sourceforge.

  * Configuration/Install tool changed to support CygWin
    better than in the past.

  * PLIB examples' data files consolidated into a single
    'examples/data' directory.

  * PLIB's documentation is now under CVS.

  * Added 'SSGAUX' library - include <plib/ssgAux.h>
    and link to /usr/lib/libplibssgaux.a

  * Aux library has 'ssga' classes to add high level
    shapes such as cylinders, cubes and spheres (two
    different kinds).

  * Lots of new example programs.
    + New PUI 'complex' uses multiple windows.
    + Cute 'waving flag' demo
    + Working Quaternions versus Eulers demo 
    + Model viewer (this is actually a useful
      program - as well as a demo).
 
  * More const-correctness throughout library.

  * OPTIONAL support for PNG image loading (you have
    to compile PLIB specially to get this because it
    introduces an additional dependancy).

  * PLIB now checks that a valid OpenGL rendering
    context exists when the various ssgInit/puInit/etc
    routines are called.

  * PUI hasi:
    + better support for multiple windows,